--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.traffichaus.com"
 documentation: "https://github.com/mediareps/gtm-retargeting"
 versions:
-  - sha: 17beefa610a989e3977aac7d3db8a7afc9fc17e2
-    changeNotes: Another update to debug why it's not submitting
+  - sha: 4a8f73981364adb9e2a61b76484dba19b3088325
+    changeNotes: Change the icon
